errors.txt
[ 64%] Building CXX object CMakeFiles/NGFWTrafficGenerator.dir/core/worker/worker.cpp.o
/home/ubuntu/NGFWTrafficGen/core/worker/worker.cpp: In member function ‘void trafficgen::Worker::worker_loop()’:
/home/ubuntu/NGFWTrafficGen/core/worker/worker.cpp:85:14: warning: unused variable ‘tx_burst_count’ [-Wunused-variable]
   85 |     uint16_t tx_burst_count = 0;
      |              ^~~~~~~~~~~~~~
/home/ubuntu/NGFWTrafficGen/core/worker/worker.cpp: In member function ‘void trafficgen::Worker::process_received_packets(rte_mbuf**, uint16_t)’:
/home/ubuntu/NGFWTrafficGen/core/worker/worker.cpp:173:38: error: ‘struct rte_mbuf’ has no member named ‘udata64’
  173 |             uint64_t sent_ns = mbuf->udata64;
      |                                      ^~~~~~~
/home/ubuntu/NGFWTrafficGen/core/worker/worker.cpp: In member function ‘void trafficgen::Worker::process_flows()’:
/home/ubuntu/NGFWTrafficGen/core/worker/worker.cpp:300:19: error: ‘struct rte_mbuf’ has no member named ‘udata64’
  300 |             mbuf->udata64 = std::chrono::duration_cast<std::chrono::nanoseconds>(
      |                   ^~~~~~~
make[2]: *** [CMakeFiles/NGFWTrafficGenerator.dir/build.make:215: CMakeFiles/NGFWTrafficGenerator.dir/core/worker/worker.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:972: CMakeFiles/NGFWTrafficGenerator.dir/all] Error 2
make: *** [Makefile:156: all] Error 2
